--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Pg::Loader.
 
+0.08  Wed Jul 23 21:48:23 2008
+	- fixed an undefined usage() error
+
 0.07  Wed Jul 23 21:48:23 2008
 	- Fixed license entry (to perl)
 
