--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Pg::Loader.
 
+0.09  Sun Oct 12 16:52:42 2008
+	- data can now arrive from stdin
+
 0.08  Wed Jul 23 21:48:23 2008
 	- fixed an undefined usage() error
 
