--- a/README
+++ b/README
@@ -37,6 +37,9 @@ Log::Log4perl            1.16
 List::MoreUtils          0.22  
 Data::Dumper             2.121_08  
 Quantum::Superpositions  2.02  
+Storable                 2.18
+
+
 
 This module recommends these other modules:
 
