--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for Perl extension Pg::Loader.
 
+0.13  Fri Oct 31 23:33:44 2008
+	- This a bug-fix release
+	- Saner behavior for "reject_log" and "reject_data": files are
+          created only when needed; loaders with small "copy_every" append
+          to same section data; different sections can record to different
+          files, and no need to adjust to correct loggin level.
+	- Other bug fixes
+ 
 0.12  Wed Oct 29 03:43:27 2008
 	- minor bugfixes
 
