--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Pg::Loader.
 
+0.15  Sun Nov  2 05:10:09 2008
+	- More regression test
+
 0.14  Sat Nov 1 07:43:24 2008
 	- Fixed irritagin undef
 
