Import of IOANNIS/Pg-Loader-0.16 from CPAN.
gitpan-cpan-distribution: Pg-Loader
gitpan-cpan-version:      0.16
gitpan-cpan-path:         IOANNIS/Pg-Loader-0.16.tar.gz
gitpan-cpan-author:       IOANNIS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Pg::Loader.
 
+0.16  Sun Nov  2 10:14:44 2008
+	- Fixed a critical a bug in update mode
+
 0.15  Sun Nov  2 05:10:09 2008
 	- More regression test
 
