--- a/README
+++ b/README
@@ -49,6 +49,11 @@ Test::MockDBI            0.61
 Test::Pod::Coverage      1.0  
 Test::Exception          0.27  
 Test::MockDBI            0.61  
+Test::HasVersion         0.012
+Test::Dependencies       0.11
+Test::CPAN::Meta         0.12
+Test::MinimumVersion     0.101080
+Test::Spelling           0.15
 
 
 COPYRIGHT AND LICENCE
