Import of IOANNIS/Pg-Loader-0.20 from CPAN.
gitpan-cpan-distribution: Pg-Loader
gitpan-cpan-version:      0.20
gitpan-cpan-path:         IOANNIS/Pg-Loader-0.20.tar.gz
gitpan-cpan-author:       IOANNIS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Pg::Loader.
 
+0.19  Fri Oct 18 23:33:33 2013
+	- Fixed test regarding DROM INDEX
+
+0.19  Sun Oct 16 20:34:11 2011
+
 0.18  Sun Aug 29 01:05:01 2011
        - Regular upkeep: changed installer, changed and added tests
 
